# libandroid-support

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: error.cpp  fileext.h  ifaddrs.cpp  local.h  sigqueue.cpp  stdio_ext.cpp  wcio.h
src/bionic/: __set_errno.cpp  error.cpp  getgrnam_r.c  sigqueue.cpp  stdio_ext.cpp  strchrnul.cpp
src/bionic/include/: LocalArray.h  ScopedFd.h  local.h
src/include/arch-arm64/: ___rt_sigqueueinfo.S  bionic_asm.h
src/libc/: CMakeLists.txt  __set_errno.cpp  clock_getcpuclockid.cpp  dirent-23.cpp  error.c  error.cpp  getgrnam_r.c  ifaddrs.cpp  lfs64_support.cpp  libc_logging.cpp  locale.cpp  lockf.cpp  mempcpy.cpp  mkfifoat.c  net_if.cpp  posix_madvise.cpp  pthread_barrier.cpp  pthread_spinlock.cpp  pty.c  reallocarray.c  scandirat.cpp  sigtimedwait.cpp  sigwaitinfo.cpp  strchrnul.cpp  strerror_r.cpp  sysinfo.cpp  wmempcpy.cpp
src/libc/arch-arm/: ___rt_sigqueueinfo.S
src/libc/arch-arm64/: preadv.S
src/libc/arch-mips/: ___rt_sigqueueinfo.S
src/libc/arch-mips/machine/: asm.h
src/libc/arch-mips64/: ___rt_sigqueueinfo.S  machine  preadv.S  pwritev.S
src/libc/arch-x86/: ___rt_sigqueueinfo.S  __rt_sigtimedwait.S  clock_adjtime.S  process_vm_readv.S  process_vm_writev.S  sethostname.S
src/libc/arch-x86/machine/: asm.h
src/libc/arch-x86_64/: ___rt_sigqueueinfo.S
src/libc/arch-x86_64/machine/: asm.h
src/libc/include/arch-arm64/machine/: asm.h
src/libc/include/private/: ScopedReaddir.h  kernel_sigset_t.h  libc_events.h  libc_logging.h  thread_private.h
src/libc/include/sys/: _errdefs.h  _sigdefs.h
src/libc/stdio/: flags.c  fmemopen.cpp  glue.h  local.h  mktemp.c  open_memstream.c  open_wmemstream.c  stdio.cpp  stdio_ext-23.cpp  stdio_ext-24.cpp
src/libc/stdlib/: lcong48.c  rand48.h
src/libm/: CMakeLists.txt  catrig.c  catrigf.c  catrigl.c  fpmath.h  invtrig.c  invtrig.h  k_exp.c  k_expf.c  math_private.h  s_cexp.c  s_cexpf.c
src/musl-ctype/: CMakeLists.txt
src/musl-multibyte/: CMakeLists.txt
