file(GLOB_RECURSE MUSL_CTYPE_SRCS "*.c" "*.h")

add_library(musl-ctype OBJECT ${MUSL_CTYPE_SRCS})
list(APPEND LIBANDROID_SUPPORT_OBJECTS $<TARGET_OBJECTS:musl-ctype>)
set(LIBANDROID_SUPPORT_OBJECTS ${LIBANDROID_SUPPORT_OBJECTS} PARENT_SCOPE)
set(musl-ctype PROPERTIES COMPILE_FLAGS " -std=c99 -DNULL=0 ")
